--- a/Hack Poly.html
+++ b/Hack Poly.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0028)http://hackpoly.com/#sponsor -->
-<html xmlns="http://www.w3.org/1999/xhtml"><script id="tinyhippos-injected">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<link rel="stylesheet" type="text/css" href="./Hack Poly_files/HackPolyCSS-altnav.css">
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+  
+  <link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
-<script src="./Hack Poly_files/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="./Hack Poly_files/jquery.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-<title>HackPoly | Cal Poly Pomona's First Hackathon</title>
+  <link rel="stylesheet" type="text/css" href="./Hack Poly_files/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./Hack Poly_files/HackPolyCSS-altnav.css">
+  <title>HackPoly | Cal Poly Pomona's First Hackathon</title>
 
 
 </head>
 
-  <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
+<body>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -23,105 +29,161 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#"><img src="./Hack Poly_files/hackpoly_header_60.png" /></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#intro">Intro</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#faq"> FAQ </a></li>
-          <li><a href="#"> Register </a> </li>
-          <li><a href="#Sponsor"> Sponsor </a> </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#faq"> faq </a></li>
+          <li><a href="#register"> register </a> </li>
+          <li><a href="#sponsor"> sponsor </a> </li>
         </ul>
       </div><!-- /.navbar-collapse -->
-    </nav>
+    </div> <!-- navbar container -->
+  </nav>
+  <div class="main-offset"></div>
 
-      <div id="title_img"><a name="top"></a>
-        <img class="titleImg" src="./Hack Poly_files/BackgroundImageHolder.jpg">
+  <div class="landing">
+    <div class="container">
+      <div class="landing-text pull-left">
+       <div class="jumbotron">
+        <h1 class="pull-right">
+          <small>
+            <span class="countdown">
+              <span class="time">
+                <span class="days">
+                  1
+                </span>
+                <br />
+                Days
+              </span>
+              <span class="time">
+                <span class="hours">
+                  1
+                </span>
+                <br />
+                Hours
+              </span><span class="time">
+                <span class="minutes">
+                  1
+                </span>
+                <br />
+                Minutes
+              </span><span class="time">
+                <span class="seconds">
+                  1
+                </span>
+                <br />
+                Seconds
+              </span>
+            </span>
+          </small>
+        </h1>
+         <div class="twitter pull-right">
+           <a class="twitter-timeline" width="400" href="https://twitter.com/HackPoly" data-widget-id="384091276628336640">Tweets by @HackPoly</a>
+           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+         </div>
+        </div>
+     </div>
+     <div class="landing-text pull-right">
+      <div class="jumbotron">
+        <h1>Cal Poly Pomona's first hackathon.</h1>
+        <p>
+          Open to Cal Poly Pomona's students of all majors.
+        </p>
+        <div class="landing-info">
+          <p>
+            <small>
+              <span class="pull-left"><i class="icon-calendar"></i><a href="#"> Jan. 24, 8PM-Jan. 26, 8AM</a></span>
+              <span class="pull-right"><i class="icon-map-marker"></i><a href="#"> Cal Poly Pomona 162-1001 </a></span>
+            </small>
+          </p>
+        </div>
+        <br />
+        <div class="btn-group">
+          <a href="#" class="btn btn-large btn-success">Register</a>
+          <a href="#" class="btn btn-large btn-info">Sponsor</a>
+        </div>
       </div>
-      <div id="title">
-        <p>&nbsp;</p>
-        <a class="button-link" href="http://www.eventbrite.com/">Register</a>
-          <a class="button-link-alt" href="./Hack Poly_files/Hack Poly.html">Sponsor</a><br><br><br>
-          <p>&nbsp;</p>
+
+    </div>
+  </div>
+</div>
+
+<div class="info-section background-1">
+  <div class="container">
+    <a name="about"> </a><h3>about</h3> 
+    <p class="section">
+      HackPoly ‘14 is the first Hackathon to EVER come to Cal Poly Pomona. Organized by some of the largest technical clubs on campus, spanning 4 colleges and 6 majors, HackPoly is set to be the event of the year for ingenuity, technical skills, and creativity.
+    </p>
+    <h4>but why?</h4>
+    <p class="section">
+      We believe that Cal Poly Pomona students have the brilliance and skills to build incredible, never-before-seen, industry disrupting products. This is where they can do exactly that.
+    </p>
+    <h4>but why?</h4>
+    <p class="section">
+      We believe that Cal Poly Pomona students have the brilliance and skills to build incredible, never-before-seen, industry disrupting products. This is where they can do exactly that.
+    </p>
+  </div>
+</div>
+<div class="info-section background-2">
+  <div class="container">
+    <a name="about"> </a><h3>faq</h3> 
+    <p class="section">
+      HackPoly ‘14 is the first Hackathon to EVER come to Cal Poly Pomona. Organized by some of the largest technical clubs on campus, spanning 4 colleges and 6 majors, HackPoly is set to be the event of the year for ingenuity, technical skills, and creativity.
+    </p>
+    <h4>but why?</h4>
+    <p class="section">
+      We believe that Cal Poly Pomona students have the brilliance and skills to build incredible, never-before-seen, industry disrupting products. This is where they can do exactly that.
+    </p>
+    <p class="section">
+      <h1>1 GOAL</h1>
+      <div class="row about">
+        <span class="col-xs-6 col-md-4">
+          4 COLLEGES
+        </span>
+        <span class="col-xs-6 col-md-4">
+          6 MAJORS
+        </span>
+        <span class="col-xs-6 col-md-4">
+          7 CLUBS
+        </span>
       </div>
-  <div id="container">
-      <div class="navbar">
-          <ul id="nav">
-            <li id="nav-1"><span id="nav-left">&nbsp;</span></li>
-              <li id="nav-2"><a href="http://hackpoly.com/#intro">Intro</a></li>
-              <li id="nav-2"><a href="http://hackpoly.com/#about">About</a></li>
-              <li id="nav-3"><a href="http://hackpoly.com/#faq">FAQ</a></li>
-              <!--<li id="nav-4"><a href="#schedule">Schedule</a></li>-->
-          </ul>
-      </div>
-      <div id="intro">
-      <hr class="contentTop"><a name="intro"></a>
-      <h1 class="section">What Is HackPoly?</h1>
-  	  <p class="section">HackPoly ‘14 is the first Hackathon to EVER come to Cal Poly Pomona. Organized by some of the largest technical clubs on campus, spanning 4 colleges and 6 majors, HackPoly is set to be the event of the year for ingenuity, technical skills, and creativity</p>
-      <h1 class="section">But...Why?</h1>
-      <p class="section">We believe that Cal Poly Pomona students have the brilliance and skills to build incredible, never-before-seen, industry disrupting products. This is where they can do exactly that.</p>
-        <p class="top"><a class="button-link-top" href="http://hackpoly.com/#top">Top</a></p>
-      </div>
-      <div id="about"><a name="about"></a>
-      <hr class="content">
-      <h1 class="section">About Us</h1>
-      <table class="about">
-      <tbody>
-      <tr><td class="about">4 COLLEGES</td><td class="about">6 MAJORS</td><td class="about">7 CLUBS</td></tr>
-      </tbody>
-      </table>
-      <p class="about"><strong>1 GOAL</strong></p>
       <p class="aboutAlt"><em>A Collaboration That Cal Poly Pomona Has Never Seen Before...</em></p>
       <img class="about" src="./Hack Poly_files/IEEELogo.png">
       <img class="aboutAlt" src="./Hack Poly_files/PolyFoundersLogo.png">
-      <p class="top"><a class="button-link-top" href="http://hackpoly.com/#top">Top</a></p>
-      </div>
-      <div id="faq"><a name="faq"></a>
-      <hr class="content">
-      <h1 class="section">FAQ</h1>
-      <div class="faqLeft">
-        <h1 class="faq">Who Can Come?</h1>
-        <p>All Cal Poly Pomona students are invited to register for HackPoly with their csupomona.edu email addresses.</p></div>
-        <div class="faq">
-          <h1 class="faq">What Does The Event Cost?</h1>
-          <p>HackPoly is set at a modest $30. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.</p></div>
-        <div class="faq">
-          <h1 class="faq">How Big Should Teams Be? Can I Do It Alone?</h1>
-          <p>Teams should be at most 6 people. You can do it alone, but it'll be less fun! When you register, we’ll assign you to a team if you dont have one already.</p></div>
-          <p class="clear">&nbsp;</p>
-          <div class="faqLeft">
+    </p>
+  </div>
+</div>
+
+
+<div id="faq"><a name="faq"></a>
+  <hr class="content">
+  <h1 class="section">FAQ</h1>
+  <div class="faqLeft">
+    <h1 class="faq">Who Can Come?</h1>
+    <p>All Cal Poly Pomona students are invited to register for HackPoly with their csupomona.edu email addresses.</p></div>
+    <div class="faq">
+      <h1 class="faq">What Does The Event Cost?</h1>
+      <p>HackPoly is set at a modest $30. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.</p></div>
+      <div class="faq">
+        <h1 class="faq">How Big Should Teams Be? Can I Do It Alone?</h1>
+        <p>Teams should be at most 6 people. You can do it alone, but it'll be less fun! When you register, we’ll assign you to a team if you dont have one already.</p></div>
+        <p class="clear">&nbsp;</p>
+        <div class="faqLeft">
           <h1 class="faq">I Don't Attend Cal Poly Pomona, Can I Still Participate?</h1>
           <p>Since this is the Cal Poly Pomona’s first Hackathon, we’re keeping it closed off for Cal Poly Pomona students only. But next year....</p></div>
           <div class="faq">
-          <h1 class="faq">What Is The Format Of HackPoly?</h1>
-          <p>Do what you do best! Software hacks are a hackathon staple, hardware hacks are greatly encouraged. Projects will be judged based on creativity, technical difficulty, polish, and usefulness.</p></div>
-        <p class="top"><a class="button-link-top" href="http://hackpoly.com/#top">Top</a></p>
-      </div>
+            <h1 class="faq">What Is The Format Of HackPoly?</h1>
+            <p>Do what you do best! Software hacks are a hackathon staple, hardware hacks are greatly encouraged. Projects will be judged based on creativity, technical difficulty, polish, and usefulness.</p></div>
+            <p class="top"><a class="button-link-top" href="http://hackpoly.com/#top">Top</a></p>
+          </div>
       <!-- <div id="schedule"><a name="schedule"></a>
       <hr class="content" />
       <h1 class="section">Schedule</h1>
-  	  <p class="section">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p class="section">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h2 align="center">Friday, January 24, 2014</h2>
         <table class="schedule" cellpadding="10">
         <tbody>
@@ -287,12 +349,53 @@
         <p class="top"><a class="button-link-top" href="#top">Top</a></p>
       </div>-->
       <div id="footer">
-      <p class="footer">© Copyright 2013 Hack Poly</p>
+        <p class="footer">© Copyright 2013 Hack Poly</p>
       </div>
-  </div>
 
 
-  <div id="media_floatingBar" style="position: absolute; left: 153px; top: 321px;"><a id="002" title="Magnifier" style="background-image: url(chrome-extension://fjccknnhdnkbanjilpjddjhmkghmachn/images/floating_bar_zoom.png);"></a>
-  </div>
-  </body>
-</html>
+      <div id="media_floatingBar" style="position: absolute; left: 153px; top: 321px;"><a id="002" title="Magnifier" style="background-image: url(chrome-extension://fjccknnhdnkbanjilpjddjhmkghmachn/images/floating_bar_zoom.png);"></a>
+      </div>
+
+      <script type="text/javascript">
+
+        function Countdown(enddate){
+          var _second = 1000;
+          var _minute = _second * 60;
+          var _hour = _minute * 60;
+          var _day = _hour * 24;
+          var timer;
+
+          function showRemaining(){
+            var now = new Date();
+            var distance = enddate - now;
+
+            var days;
+            var hours;
+            var minutes;
+            var seconds;
+
+            if (distance < 0) {
+              days=0;
+              hours=0;
+              minutes=0;
+              seconds=0;
+            } else{
+              days = Math.floor(distance / _day);
+              hours = Math.floor((distance % _day) / _hour);
+              minutes = Math.floor((distance % _hour) / _minute);
+              seconds = Math.floor((distance % _minute) / _second);
+            }
+
+            $(".days").html(days);
+            $(".hours").html(hours);
+            $(".minutes").html(minutes);
+            $(".seconds").html(seconds);
+          }
+          timer = setInterval(showRemaining, 1000);
+
+        }
+
+        Countdown(new Date("01/24/2014 8:00 PM"))
+      </script>
+    </body>
+    </html>
