--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#about">about</a></li>
           <li><a href="#faq"> faq </a></li>
-          <li><a href="#register"> register </a> </li>
-          <li><a href="#sponsor"> sponsor </a> </li>
+          <li>
+            <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater"> 
+              register 
+            </a> 
+          </li>
+          <li><a href="mailto:sponsorship@hackpoly.com"> sponsor </a> </li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div> <!-- navbar container -->
@@ -42,71 +46,76 @@
 
   <div class="landing">
     <div class="container">
-      <div class="landing-text pull-left">
-       <div class="jumbotron">
-        <h1 class="pull-right">
-          <small>
-            <span class="countdown">
-              <span class="time">
-                <span class="days">
+      <div class="row">
+        <div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
+          <div class="landing-text">
+             <div class="jumbotron">
+              <h1>
+                <small>
+                  <div class="countdown row">
+                    <span class="time col-md-3 col-xs-6">
+                      <span class="days">
 
-                </span>
-                <br />
-                Days
-              </span>
-              <span class="time">
-                <span class="hours">
+                      </span>
+                      <br />
+                      Days
+                    </span>
+                    <span class="time col-md-3 col-xs-6">
+                      <span class="hours">
 
-                </span>
-                <br />
-                Hours
-              </span>
-              <span class="time">
-                <span class="minutes">
+                      </span>
+                      <br />
+                      Hours
+                    </span>
+                    <span class="time col-md-3 col-xs-6">
+                      <span class="minutes">
 
-                </span>
-                <br />
-                Minutes
-              </span>
-              <span class="time">
-               <span class="seconds">
+                      </span>
+                      <br />
+                      Minutes
+                    </span>
+                    <span class="time col-md-3 col-xs-6">
+                     <span class="seconds">
 
-               </span>
-               <br />
-               Seconds
-             </span>
-           </span>
-         </small>
-       </h1>
-       <div class="twitter pull-right">
-         <a class="twitter-timeline" width="400" href="https://twitter.com/HackPoly" data-widget-id="384091276628336640">Tweets by @HackPoly</a>
-         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-       </div>
-     </div>
-   </div>
-   <div class="landing-text pull-right">
-    <div class="jumbotron">
-      <h1>Cal Poly Pomona's first hackathon.</h1>
-      <p>
-        Open to Cal Poly Pomona's students of all majors.
-      </p>
-      <div class="landing-info">
-        <p>
-          <small>
-            <span class="pull-left"><i class="icon-calendar"></i><a href="#"> Jan. 24, 8PM-Jan. 26, 8AM</a></span>
-            <span class="pull-right"><i class="icon-map-marker"></i><a href="#"> Cal Poly Pomona 162-1001 </a></span>
-          </small>
-        </p>
-      </div>
-      <br />
-      <div class="btn-group">
-        <a href="#" class="btn btn-large btn-success">Register</a>
-        <a href="#" class="btn btn-large btn-info">Sponsor</a>
+                     </span>
+                     <br />
+                     Seconds
+                   </span>
+                 </div>
+               </small>
+             </h1>
+             <div class="twitter pull-right hidden-xs">
+               <a class="twitter-timeline" width="400" href="https://twitter.com/HackPoly" data-widget-id="384091276628336640">Tweets by @HackPoly</a>
+               <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+             </div>
+           </div>
+         </div>
+        </div>
+
+        <div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
+          <div class="landing-text">
+            <div class="jumbotron">
+              <h1>Cal Poly Pomona's first hackathon.</h1>
+              <p>
+                Open to Cal Poly Pomona's students of all majors.
+              </p>
+              <div class="landing-info">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12"><i class="icon-calendar"></i><a href="#"> Jan. 24, 8PM-Jan. 26, 8AM</a></div>
+                    <div class="col-md-6 col-xs-12"><i class="icon-map-marker"></i><a href="#"> Cal Poly Pomona 162-1001 </a></div>
+                </div>
+              </div>
+              <br />
+              <div class="btn-group">
+                <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater" class="btn btn-large btn-success">Register</a>
+                <a href="mailto:sponsorship@hackpoly.com" class="btn btn-large btn-info">Sponsor</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-</div>
 
 <div class="info-section background-1">
   <div class="container">
@@ -134,52 +143,85 @@
         </span>
       </div>
       
-      <img src="res/PolyFoundersLogo.png" />
-      <img src="res/IEEELogo.png" />
-      <img src="res/clublogo.png" />
-      <img src="res/missa.png" />
-      <img src="res/templogo.png" />
-      <img src="res/css-logo2.gif" />
+      <div class="row">
+        <div class="col-md-3 col-xs-6">
+          <img src="res/PolyFoundersLogo.png" class="clubimg" />
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/IEEELogo.png" class="clubimg"/>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/missa.png" class="clubimg"/>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/templogo.png" class="clubimg"/>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-offset-4 col-md-4 col-xs-6">
+          <img src="res/css-logo2.gif" class="clubimg"/>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
 <div class="info-section background-2">
   <div class="container">
     <a name="faq"> </a><h3>faq</h3>
-    <div class="row">
-      <div class="col-md-3 col-xs-6">
-        <h4> Who Can Come? </h4>
-        <br />
-        All Cal Poly Pomona students are invited to register for HackPoly with their csupomona.edu email addresses.
+    <div class="section">
+      <div class="row">
+        <div class="col-md-3 col-xs-6">
+          <h4> Who Can Come? </h4>
+          <br />
+          All Cal Poly Pomona students are invited to register for HackPoly with their csupomona.edu email addresses.
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <h4> What Does the Event Cost? </h4>
+          <br />
+          HackPoly is set at a modest $30. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <h4> How Big Should Teams Be? </h4>
+          <br />
+          Teams should be at most 6 people. You can do it alone, but it'll be less fun! When you register, we’ll assign you to a team if you dont have one already.
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <h4> I Don't Attend Cal Poly Pomona, Can I Still Participate? </h4>
+          <br />
+          Since this is the Cal Poly Pomona’s first Hackathon, we’re keeping it closed off for Cal Poly Pomona students only. But next year....
+        </div>
       </div>
-      <div class="col-md-3 col-xs-6">
-        <h4> What Does the Event Cost? </h4>
-        <br />
-        HackPoly is set at a modest $30. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <h4> How Big Should Teams Be? </h4>
-        <br />
-        Teams should be at most 6 people. You can do it alone, but it'll be less fun! When you register, we’ll assign you to a team if you dont have one already.
-      </div>
-      <div class="col-md-3 col-xs-6">
-        <h4> I Don't Attend Cal Poly Pomona, Can I Still Participate? </h4>
-        <br />
-        Since this is the Cal Poly Pomona’s first Hackathon, we’re keeping it closed off for Cal Poly Pomona students only. But next year....
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3 col-xs-6">
-        <h4> What Is The Format Of HackPoly? </h4>
-        <br />
-        Do what you do best! Software hacks are a hackathon staple, hardware hacks are greatly encouraged. Projects will be judged based on creativity, technical difficulty, polish, and usefulness.
+      <div class="row">
+        <div class="col-md-3 col-xs-6">
+          <h4> What Is The Format Of HackPoly? </h4>
+          <br />
+          Do what you do best! Software hacks are a hackathon staple, hardware hacks are greatly encouraged. Projects will be judged based on creativity, technical difficulty, polish, and usefulness.
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <div class="footer">
-  <p class="footer">© Copyright 2013 Hack Poly</p>
+  <div class="row">
+    <div class="col-md-4">
+      site by Bryan Thornbury
+    </div>
+    <div class="col-md-4">
+      for more info email: <a href="mailto:info@hackpoly.com">info@hackpoly.com</a>
+    </div>
+    <div class="col-md-4">
+      <span class="social-icon">
+        <a href="http://facebook.com/hackpoly"><i class="icon-facebook-sign"></i></a>
+      </span>
+      <span class="social-icon">
+        <a href="http://twitter.com/hackpoly"><i class="icon-twitter-sign"></i></a>
+      </span>
+    </div>
+  </div>
+  <p class="footer">© copyright 2013 hackpoly</p>
 </div>
 
 <script src="res/jquery.min.js"></script>
