--- a/index.html
+++ b/index.html
@@ -106,9 +106,18 @@
                 </div>
               </div>
               <br />
-              <div class="btn-group">
-                <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater" class="btn btn-large btn-success">Register</a>
-                <a href="mailto:sponsorship@hackpoly.com" class="btn btn-large btn-info">Sponsor</a>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="btn-group">
+                    <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater" class="btn btn-large btn-success">Register</a>
+                    <a href="mailto:sponsorship@hackpoly.com" class="btn btn-large btn-info">Sponsor</a>
+                  </div>
+                </div>
+
+
+
+               
+
               </div>
             </div>
           </div>
@@ -180,7 +189,7 @@
         <div class="col-md-3 col-xs-6">
           <h4> What Does the Event Cost? </h4>
           <br />
-          HackPoly is set at a modest $30. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.
+          HackPoly is set at a modest $7. This gets you in the event, a HackPoly T-shirt, 4 Meals, a ton of snack and drinks, networking with major companies and the chance to win some cool stuff.
         </div>
         <div class="col-md-3 col-xs-6">
           <h4> How Big Should Teams Be? </h4>
@@ -199,6 +208,20 @@
           <br />
           Do what you do best! Software hacks are a hackathon staple, hardware hacks are greatly encouraged. Projects will be judged based on creativity, technical difficulty, polish, and usefulness.
         </div>
+
+        <div class="col-md-3 col-xs-6">
+          <h4> What Should I Bring? </h4>
+          <br />
+          All attendees are required to bring their valid student ID for admission (name must 
+          match Eventbrite registration) and a laptop for hacking. If you want to do a 
+          hardware hack, don't forget to bring the devices you plan on working with
+        </div>
+
+        <div class="col-md-3 col-xs-6">
+          <h4> I have more questions, who can I contact? </h4>
+          <br />
+          Email us at: <a href="mailto:info@hackpoly.com">info@hackpoly.com</a>
+        </div>
       </div>
     </div>
   </div>
@@ -207,7 +230,7 @@
 <div class="footer">
   <div class="row">
     <div class="col-md-4">
-      site by Bryan Thornbury
+      site by <a href="http://twitter.com/BryanTbury">Bryan Thornbury</a>
     </div>
     <div class="col-md-4">
       for more info email: <a href="mailto:info@hackpoly.com">info@hackpoly.com</a>
