Club logos updated and links to calendar event + map added

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               </p>
               <div class="landing-info">
                 <div class="row">
-                    <div class="col-md-6 col-xs-12"><i class="icon-calendar"></i><a href="#"> Jan. 24, 8PM-Jan. 26, 8AM</a></div>
-                    <div class="col-md-6 col-xs-12"><i class="icon-map-marker"></i><a href="#"> Cal Poly Pomona 162-1001 </a></div>
+                    <div class="col-md-6 col-xs-12"><i class="icon-calendar"></i><a target="_blank" href="https://www.google.com/calendar/event?action=TEMPLATE&tmeid=NTM5N3VjZjk4dWdraGV0NGYyZGQyZjJocW8gNWk0MGRnbjhvNGs1MTM2ZWpxOXBmcXNnOGtAZw&tmsrc=5i40dgn8o4k5136ejq9pfqsg8k%40group.calendar.google.com"> Jan. 24, 8PM-Jan. 26, 8AM</a></div>
+                    <div class="col-md-6 col-xs-12"><i class="icon-map-marker"></i><a href="http://www.csupomona.edu/maps/static/index.php?structureID=Bg-162"> Cal Poly Pomona 162-1001 </a></div>
                 </div>
               </div>
               <br />
@@ -148,28 +148,45 @@
           <h3>6 MAJORS</h3>
         </span>
         <span class="col-xs-4 col-md-4">
-          <h3>7 CLUBS</h3>
+          <h3>9 CLUBS</h3>
         </span>
       </div>
+
       <br />
+
       <div class="row">
         <div class="col-md-3 col-xs-6">
-          <img src="res/PolyFoundersLogo.png" class="clubimg" />
+          <img src="res/clubs/AAF.png" class="clubimg" />
         </div>
         <div class="col-md-3 col-xs-6">
-          <img src="res/IEEELogo.png" class="clubimg"/>
+          <img src="res/clubs/AMA.png" class="clubimg"/>
         </div>
         <div class="col-md-3 col-xs-6">
-          <img src="res/missa.png" class="clubimg"/>
+          <img src="res/clubs/ASA.png" class="clubimg"/>
         </div>
         <div class="col-md-3 col-xs-6">
-          <img src="res/templogo.png" class="clubimg"/>
+          <img src="res/clubs/CSS.png" class="clubimg"/>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-offset-4 col-md-4 col-xs-6">
-          <img src="res/css-logo2.gif" class="clubimg"/>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/clubs/FAST.png" class="clubimg"/>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/clubs/IEEE.png" class="clubimg"/>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/clubs/MISSA.png" class="clubimg"/>
+        </div>
+        <div class="col-md-3 col-xs-6">
+          <img src="res/clubs/SWIFT.png" class="clubimg"/>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-offset-3 col-xs-offset-2 col-md-6 col-xs-8">
+          <img src="res/clubs/Poly Founders.png" class="clubimg"/>
         </div>
       </div>
 
@@ -197,7 +214,7 @@
           Teams should be at most 6 people. You can do it alone, but it'll be less fun! When you register, we’ll assign you to a team if you dont have one already.
         </div>
         <div class="col-md-3 col-xs-6">
-          <h4> I Don't Attend Cal Poly Pomona, Can I Still Participate? </h4>
+          <h4> What if I don't go to Cal Poly? </h4>
           <br />
           Since this is the Cal Poly Pomona’s first Hackathon, we’re keeping it closed off for Cal Poly Pomona students only. But next year....
         </div>
