--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </nav>
   <div class="main-offset"></div>
 
-  <div class="landing">
+  <div class="landing" data-type="background" data-speed="3">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-6 col-lg-6 col-xs-12">
@@ -84,10 +84,10 @@
                  </div>
                </small>
              </h1>
-             <div class="twitter pull-right hidden-xs">
+             <!--<div class="twitter pull-right hidden-xs">
                <a class="twitter-timeline" width="400" href="https://twitter.com/HackPoly" data-widget-id="384091276628336640">Tweets by @HackPoly</a>
                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-             </div>
+             </div>-->
            </div>
          </div>
         </div>
@@ -306,7 +306,23 @@ function Countdown(enddate){
 
 }
 
-Countdown(new Date("01/24/2014 8:00 PM"))
+Countdown(new Date("01/24/2014 8:00 PM"));
+
+$(document).ready(function(){
+    $('div[data-type="background"]').each(function(){
+        var $bgobj = $(this); // assigning the object
+     
+        $(window).scroll(function() {
+            var yPos = -($(window).scrollTop() / $bgobj.data('speed')); 
+             
+            // Put together our final background position
+            var coords = '50% '+ yPos + 'px';
+ 
+            // Move the background
+            $bgobj.css({ backgroundPosition: coords });
+        }); 
+    });    
+}); 
 </script>
 </body>
 </html>
