--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
       </div>
 
       <div class="row">
-        <div class="col-md-offset-3 col-xs-offset-2 col-md-6 col-xs-8">
-          <img src="res/clubs/Poly Founders.png" class="clubimg"/>
+        <div class="col-md-offset-2 col-md-8 col-xs-12">
+          <img src="res/clubs/poly-founders-logo.png" class="clubimg large"/>
         </div>
       </div>
 
