--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li><a href="#about">about</a></li>
           <li><a href="#faq"> faq </a></li>
           <li>
-            <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater"> 
+            <a href="http://hackpoly.eventbrite.com"> 
               register 
             </a> 
           </li>
@@ -109,7 +109,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="btn-group">
-                    <a href="https://www.facebook.com/photo.php?fbid=664106273609381&set=a.664105166942825.1073741828.613634788656530&type=1&theater" class="btn btn-large btn-success">Register</a>
+                    <a href="http://hackpoly.eventbrite.com" class="btn btn-large btn-success">Register</a>
                     <a href="mailto:sponsorship@hackpoly.com" class="btn btn-large btn-info">Sponsor</a>
                   </div>
                 </div>
