--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </p>
               <div class="landing-info">
                 <div class="row">
-                    <div class="col-md-6 col-xs-12"><i class="icon-calendar"></i><a target="_blank" href="https://www.google.com/calendar/event?action=TEMPLATE&tmeid=NTM5N3VjZjk4dWdraGV0NGYyZGQyZjJocW8gNWk0MGRnbjhvNGs1MTM2ZWpxOXBmcXNnOGtAZw&tmsrc=5i40dgn8o4k5136ejq9pfqsg8k%40group.calendar.google.com"> Jan. 24, 8PM-Jan. 26, 8AM</a></div>
+                    <div class="col-md-6 col-xs-12"><i class="icon-calendar"></i><a target="_blank" href="https://www.google.com/calendar/event?action=TEMPLATE&tmeid=NTM5N3VjZjk4dWdraGV0NGYyZGQyZjJocW8gNWk0MGRnbjhvNGs1MTM2ZWpxOXBmcXNnOGtAZw&tmsrc=5i40dgn8o4k5136ejq9pfqsg8k%40group.calendar.google.com"> Jan. 24, 8PM-Jan. 25, 9PM</a></div>
                     <div class="col-md-6 col-xs-12"><i class="icon-map-marker"></i><a href="http://www.csupomona.edu/maps/static/index.php?structureID=Bg-162"> Cal Poly Pomona 162-1001 </a></div>
                 </div>
               </div>
