--- a/index.html
+++ b/index.html
@@ -308,5 +308,15 @@ function Countdown(enddate){
 
 Countdown(new Date("01/24/2014 8:00 PM"))
 </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46285917-1', 'hackpoly.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
