--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@
   <div class="container">
     <a name="sponsor"></a><h3>sponsors</h3>
     <div class="sponsor-logo-row-1">
-        <img class="img-responsive sponsor-logo" src="res/sponsor_logo/microsoft_cropped.png">
+        <a href="http://microsoft.com">
+          <img class="img-responsive sponsor-logo" src="res/sponsor_logo/microsoft_cropped.png">
+        </a>
     </div>
     <div class="sponsor-logo-row-2">
         <a href="http://www.spacex.com/">
@@ -336,7 +338,9 @@
     </div>
 
     <div class="sponsor-logo-row-2">
-      <img class="img-responsive sponsor-logo" src="res/sponsor_logo/atthepool_alex_cropped.png">
+      <a href="http://sony.com">
+        <img class="img-responsive sponsor-logo" src="res/sponsor_logo/atthepool_alex_cropped.png">
+      </a>
     </div>
   </div>
 </div>
